mongodb connected and tested successfully against a push request to a demo repo using postman

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3000
 MONGODB_URI=mongodb://localhost:27017/webhookdb
 GITHUB_SECRET=yourgithubwebhooksecret
+MONGODB_URI=mongodb+srv://VoyagerX21:h7r4RVCcEbU71Cn3@cluster1.kw3xd3o.mongodb.net/
